syntax = "proto3";

option java_package = "com.SmartWatchgRPC";

service restaurants{

	rpc getRestaurants (location) returns (stream restaurant) {}
	
	rpc makeReservation(reservationDetails) returns (reservationConfirmation) {}
	
	rpc makeOrder(stream orderDetails) returns (orderConfirmation) {}
}

message location {
  double latitude = 1;
  double longtitude = 2;
  
}
message restaurant {
   string restaurantDetails = 1;
   
  
}

message reservationDetails {
  string time = 1;
  string restaurantName = 2;
  int32 numberOfSeats = 3;
}

message reservationConfirmation {
  string reservationSummary = 1;  
}

message orderDetails {
  string item = 1;  
  string paymentDetails = 2;
}

message orderConfirmation {
  string orderSummary = 1; 
  string totalCost = 2;
  
}
